<resources>
    <string name="app_name">MangaTN V2.5</string>
    <string name="chapters">CHAPTERS</string>
    <string name="Resume">Resume</string>
    <string name="Start">Start</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="please_sign_in_to_view_your_favorite_mangas">Please Sign in to view your favorite mangas</string>
    <string name="no_data_found">No data found!!!</string>
    <string name="log_out">Log Out</string>
    <string name="update_profile">Update Profile</string>
    <string name="an_error_has_occurred">An Error Has Occurred</string>
    <string name="retry">Retry</string>
    <string name="default_manga_count">133</string>
    <string name="default_manga_title">Attack On Titan</string>
    <string name="ltr">LTR</string>
    <string name="rtl">RTL</string>
    <string name="update_user">Update User</string>
    <string name="reset_password">Reset Password</string>
    <string name="open_menu">Open Menu</string>

    <string-array name="filter_options">
        <item>All</item>
        <item>Ongoing</item>
        <item>Completed</item>
    </string-array>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="verify_email">Verify Email</string>
    <string name="confirm">Confirm</string>
    <string name="verification_code">Verification Code</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="all_status">All Status</string>
    <string name="all_genres">All Genres</string>
    <string name="manga_authors">manga authors</string>
    <string name="manga_title">manga title</string>
    <string name="manga_cover_image">manga cover image</string>
    <string name="bookmark">bookmark</string>
    <string name="favorites">FAVORITES</string>
    <string name="search">SEARCH</string>
    <string name="manga_filter">manga filter</string>
    <string name="previous_chapter_name">Previous Chapter Name</string>
    <string name="finished_chapter_name">Finished Chapter Name</string>
    <string name="next_chapter_name">Next Chapter Name</string>
    <string name="current_chapter_name">Current Chapter Name</string>
    <string name="finished_chapter">Finished Chapter:</string>
    <string name="next_chapter">Next Chapter:</string>
    <string name="current_chapter">Current Chapter:</string>
    <string name="previous_chapter">Previous Chapter</string>
    <string name="manga_status">manga status</string>
    <string name="list">list</string>
    <string name="check_icon">check icon</string>
    <string name="both">Both</string>
    <string name="chapter">chapter</string>
</resources>