<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?colorSecondary"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/currentAndNextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finished_chapter"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/currentChapterNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_chapter_name"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_chapter"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/nextChapterNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/next_chapter_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/previousAndCurrentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_chapter"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/previousChapterNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/previous_chapter_name"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_chapter"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/finishedChapterNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/finished_chapter_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center" />

    </LinearLayout>

</LinearLayout>
