<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:visibility="visible">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnBack"
            android:background="@android:color/transparent"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/baseline_keyboard_arrow_left"
            android:importantForAccessibility="no"
            android:layout_alignParentStart="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@+id/btnLayout"
            android:layout_toEndOf="@+id/btnBack">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/default_manga_title"
                android:textSize="18sp"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true">

            <ImageButton
                android:id="@+id/saveChapter"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_save_alt_24"
                android:visibility="gone" />

            <ToggleButton
                android:id="@+id/LeftToRightBtn"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:textOn="@string/ltr"
                android:textOff="@string/rtl"
                android:background="@android:color/transparent"
                android:textColor="@color/white"/>

        </LinearLayout>

    </RelativeLayout>
</androidx.appcompat.widget.Toolbar>